--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,8 @@ jobs:
     if: github.event.pull_request.merged == true || github.event_name == 'push'
     steps:
     - uses: actions/checkout@v4
+      with:
+        lfs: true
 
     - name: Install uv
       uses: astral-sh/setup-uv@v6
